* 1.9.2
	* New features:
		- Provide zfix command to repair broken zset(2015-12-02)
		- Supports specifying slaveof.host in ssdb.conf(2015-11-23)
		- Do not allow flushdb when replication is in use(2015-11-16)
		- Provide server side flushdb(2015-09-17)
		- The slave will flush db when receive copy_begin(2015-07-28)
	* Incompatible changes:
		- Will not support db size for redis clients(2015-08-07)
	* Bug fixes:
		- Fix zclear infinite loop when data is broken(2015-12-02)
		- Fix setbit crash on very big offset(2015-11-17)
		- Fix Jedis zadd() score in scientific notation(2015-10-22)
* 1.9.1
	* Incompatible changes:
		- zrank/zrrank return not_found(prev is error) if member not exists(2015-07-16)
		- PHP API zrank/zrrank return null(prev is false) if member not exists(2015-07-16)
* 1.9.0
	* New features:
		- Update MAX_PACKET_SIZE to 128MB(2015-04-28)
		- Process most read commands in reader threads, not main thread(2015-04-28)
		- Add bitcount command, which is similar to Redis's bitcount(2015-04-15)
		- Add zpop_front, zpop_back command(2015-04-01)
		- Support static library build for iOS(2015-03-26)
		- Update options.max_open_files default value to 500(2015-03-15)
		- Add version command(2015-03-10)
		- Add rkeys command(2015-02-15)
	* Bug fixes:
		- Fix replication status display error(2015-04-09)
* 1.8.1
	* Bug fixes:
		- Fix ttl bug(https://github.com/ideawu/ssdb/issues/628)(2015-03-14)
* 1.8.0
	* New features:
		- Support SSDB style keys command through redis-cli(2014-12-08)
		- Replication supports AUTH(2014-12-01)
		- Sync qset operations(2014-11-05)
		- Add dbsize command(2014-11-02)
		- Include sync clients' stats in info(2014-11-02)
		- Refactor codes, separate into: libutil, libnet, libssdb(2014-11-02)
	* Bug fixes:
		- Fix bug when process dump and sync140 command with redis-cli(2015-01-27)
* 1.7.0.1
	* New features:
		- Sync qset operations(2014-11-05)
		- *incr commands return error if value cannot be converted to integer(2014-10-24)