@@ -23,6 +23,7 @@ public:
 	int compaction_speed;
 	std::string compression;
 	bool binlog;
+	size_t binlog_capacity;
 };
 
 #endif
