@@ -57,7 +57,7 @@ SSDB* SSDB::open(const Options &opt, const std::string &dir){
 		log_error("open db failed: %s", status.ToString().c_str());
 		goto err;
 	}
-	ssdb->binlogs = new BinlogQueue(ssdb->ldb, opt.binlog);
+	ssdb->binlogs = new BinlogQueue(ssdb->ldb, opt.binlog, opt.binlog_capacity);
 
 	return ssdb;
 err:
