@@ -10,6 +10,7 @@ server:
 
 replication:
 	binlog: yes
+		capacity: 20000000
 	# Limit sync speed to *MB/s, -1: no limit
 	sync_speed: -1
 	slaveof:
